--- a/views/room.ejs
+++ b/views/room.ejs
@@ -12,9 +12,9 @@
    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
    <script src="/socket.io/socket.io.js" defer></script>
-   <link rel="stylesheet" href="style.css">
+   <link rel="stylesheet" href="../css/room.css">
    <script src="https://kit.fontawesome.com/c939d0e917.js"></script>
-   <script src="script.js" defer></script>
+   <script src="../script.js" defer></script>
    <style>
       #video-grid{
          display: flex;
@@ -22,21 +22,45 @@
          flex-wrap: wrap;
       }
       video{
-         height: 300px;
-         width: 400px;
+         height: 100%;
+         width: 100%;
+         object-fit: contain;
+      }
+      video #participants-video {
+         width: 300px;
          object-fit: cover;
-         padding: 8px;
+         height: 400px;
       }
    </style>
 </head>
 <body>
-   <div class="main">
-      <div class="main__left">
-         <div class="main__videos">
-            <div id="video-grid">
-      
+   <div class="container">
+      <div class="main">
+         <div class="main__left">
+            <div class="main__videos">
+               <div id="video-grid">
+               </div>
             </div>
          </div>
+         <div class="main__right">
+            <div class="chat">
+               <div class="main__header">
+                  <h6>Chat</h6>
+               </div>
+               <div class="main__chat_window">
+                  <ul class="messages">
+                     
+                  </ul>
+      
+               </div>
+               <div class="main__message_container">
+                  <input id="chat_message" type="text" placeholder="Type message here...">
+               </div>
+            </div>
+            <div id="myVideo"></div>
+         </div>
+      </div>
+      <div class="bottom">
          <div class="main__controls">
             <div class="main__controls__block">
                <div onclick="muteUnmute()" class="main__controls__button main__mute_button">
@@ -67,20 +91,6 @@
                   <span class="leave_meeting">Leave Meeting</span>
                </div>
             </div>
-         </div>
-      </div>
-      <div class="main__right">
-         <div class="main__header">
-            <h6>Chat</h6>
-         </div>
-         <div class="main__chat_window">
-            <ul class="messages">
-               
-            </ul>
-
-         </div>
-         <div class="main__message_container">
-            <input id="chat_message" type="text" placeholder="Type message here...">
          </div>
       </div>
    </div>
