--- a/views/room.ejs
+++ b/views/room.ejs
@@ -22,8 +22,8 @@
          flex-wrap: wrap;
       }
       video{
-         height: 100%;
-         width: 100%;
+         height: 200px;
+         width: 200px;
          object-fit: contain;
       }
       video #participants-video {
