--- a/views/room.ejs
+++ b/views/room.ejs
@@ -22,9 +22,12 @@
          flex-wrap: wrap;
       }
       video{
-         height: 200px;
-         width: 200px;
+         height: 300px;
+         width: 300px;
          object-fit: cover;
+      }
+      video #participants-video {
+         flex: 1;
       }
    </style>
 </head>
