--- a/views/room.ejs
+++ b/views/room.ejs
@@ -21,7 +21,7 @@
          justify-content: center;
          flex-wrap: wrap;
       }
-      video #participants-video {
+      video .participants-video {
          flex: 1;
       }
    </style>
