--- a/views/room.ejs
+++ b/views/room.ejs
@@ -21,8 +21,10 @@
          justify-content: center;
          flex-wrap: wrap;
       }
-      video  {
+      video {
          flex: 1;
+         flex-wrap: wrap;
+         padding: 20px;
       }
    </style>
 </head>
@@ -50,7 +52,6 @@
                   <input id="chat_message" type="text" placeholder="Type message here...">
                </div>
             </div>
-            <div id="myVideo"></div>
          </div>
       </div>
       <div class="bottom">
