--- a/views/room.ejs
+++ b/views/room.ejs
@@ -23,7 +23,8 @@
       }
       video {
          flex: 1;
-         flex-wrap: wrap;
+         min-width: 300px;
+         min-height: 400px;
          padding: 20px;
       }
    </style>
