--- a/public/css/room.css
+++ b/public/css/room.css
@@ -7,102 +7,79 @@
     font-family: 'Poppins', sans-serif;
 }
 body {
-    height: 100vh;
+    height: 100%;
     width: 100%;
     padding: 0;
     margin: 0;
     background: #000;
 }
-.container {
+.main {
+    height: 100vh;
+    display: flex;
+}
+
+.main__left {
+    flex: 0.8;
     display: flex;
     flex-direction: column;
-    width: 100%;
-    align-items: stretch;
-    height: 100%;
-}
-.container .main {
-    height: 85%;
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    flex-direction: row;
 }
 
-.container .main .main__left {
-    width: 60%;
-    padding: 0;
-    height: 100%;
+.main__right {
+    flex: 0.2
 }
 
-.container .main .main__right {
-    width: 40%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    height: 100%;
-}
-
-.container .main .main__left .main__videos {
+.main__videos {
+    flex-grow: 1;
     background-color: black;
-    width: 100%;
-    height: 100%;
-}
-.container .main .main__left .main__videos #video-grid {
-    width: 100%;
-    padding: 20px;
-    height: 100%;
-}
-
-.container .bottom  {
     display: flex;
-    width: 100%;
-    height: 15%;
-    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 40px;
 }
 
-.container .bottom .main__controls {
+.main__controls {
+    background-color: #1C1E20;
+}
+
+.main__right {
+    background-color: #242324;
+    border-left: 1px solid #3D3D42;
+}
+
+.main__controls {
     color: #D2D2D2;
     display: flex;
     justify-content: space-between;
-    height: 100%;
-    width: 100%;
     padding: 5px;
 }
 
-.container .bottom .main__controls .main__controls__block {
+.main__controls__block {
     display: flex;
 }
-.container .bottom .main__controls .main__controls__block div {
-    height: 70px;
-    width: 70px;
-}
 
-.container .bottom .main__controls .main__controls__button {
+.main__controls__button {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-right: 15px;
     padding: 8px 10px;
-    min-width: 60px;
+    min-width: 80px;
     cursor: pointer;
 }
 
-.container .bottom .main__controls .main__controls__button:hover {
+.main__controls__button:hover {
     background-color: #343434;
     border-radius: 5px;
 }
 
-.container .bottom .main__controls .main__controls__button i {
-    font-size: 21px;
-}
-.chat {
-    display: flex;
-    width: 100%;
-    flex-direction: column;
-    height: 70%;
+.main__controls__button i {
+    font-size: 24px;
 }
 
+.main__right {
+    display: flex;
+    flex-direction: column;
+}
 
 .main__header {
     padding-top: 5px;
@@ -112,8 +89,6 @@ body {
 
 .main__chat_window {
     flex-grow: 1;
-    display: flex;
-    justify-content: space-between;
     overflow-y: auto;
 }
 
@@ -123,14 +98,12 @@ body {
 }
 
 .main__message_container {
+    padding: 22px 12px;
     display: flex;
-    height: 30px;
-    width: 100%;
 }
 
 .main__message_container input {
-    width: 70%;
-    text-align: center;
+    flex-grow: 1;
     background-color: transparent;
     border: none;
     color: #F5F5F5;
@@ -143,4 +116,3 @@ body {
 .unmute, .stop {
     color: #CC3B33;
 }
-
