--- a/views/room.ejs
+++ b/views/room.ejs
@@ -3,7 +3,7 @@
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Seaera</title>
+   <title>Document</title>
    <script>
       const ROOM_ID = "<%= roomId %>"
    </script>
@@ -12,50 +12,31 @@
    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
    <script src="/socket.io/socket.io.js" defer></script>
-   <link rel="stylesheet" href="../css/room.css">
+   <link rel="stylesheet" href="style.css">
    <script src="https://kit.fontawesome.com/c939d0e917.js"></script>
-   <script src="../script.js" defer></script>
+   <script src="script.js" defer></script>
    <style>
       #video-grid{
          display: flex;
          justify-content: center;
          flex-wrap: wrap;
       }
-      video {
-         flex: 1;
-         min-width: 300px;
-         min-height: 400px;
-         padding: 20px;
+      video{
+         height: 300px;
+         width: 400px;
+         object-fit: cover;
+         padding: 8px;
       }
    </style>
 </head>
 <body>
-   <div class="container">
-      <div class="main">
-         <div class="main__left">
-            <div class="main__videos">
-               <div id="video-grid">
-               </div>
-            </div>
-         </div>
-         <div class="main__right">
-            <div class="chat">
-               <div class="main__header">
-                  <h6>Chat</h6>
-               </div>
-               <div class="main__chat_window">
-                  <ul class="messages">
-                     
-                  </ul>
+   <div class="main">
+      <div class="main__left">
+         <div class="main__videos">
+            <div id="video-grid">
       
-               </div>
-               <div class="main__message_container">
-                  <input id="chat_message" type="text" placeholder="Type message here...">
-               </div>
             </div>
          </div>
-      </div>
-      <div class="bottom">
          <div class="main__controls">
             <div class="main__controls__block">
                <div onclick="muteUnmute()" class="main__controls__button main__mute_button">
@@ -68,10 +49,10 @@
                </div>
             </div>
             <div class="main__controls__block">
-                  <div class="main__controls__button">
-                     <i class="fas fa-share"></i>
-                     <span>Share</span>
-                  </div>
+               <div class="main__controls__button">
+                  <i class="fas fa-shield-alt"></i>
+                  <span>Security</span>
+               </div>
                <div class="main__controls__button">
                   <i class="fas fa-user-friends"></i>
                   <span>Participants</span>
@@ -86,6 +67,20 @@
                   <span class="leave_meeting">Leave Meeting</span>
                </div>
             </div>
+         </div>
+      </div>
+      <div class="main__right">
+         <div class="main__header">
+            <h6>Chat</h6>
+         </div>
+         <div class="main__chat_window">
+            <ul class="messages">
+               
+            </ul>
+
+         </div>
+         <div class="main__message_container">
+            <input id="chat_message" type="text" placeholder="Type message here...">
          </div>
       </div>
    </div>
