--- a/views/room.ejs
+++ b/views/room.ejs
@@ -3,7 +3,7 @@
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Document</title>
+   <title>Seaera | <%= locals.title %></title>
    <script>
       const ROOM_ID = "<%= roomId %>"
    </script>
@@ -22,8 +22,7 @@
          flex-wrap: wrap;
       }
       video{
-         height: 300px;
-         width: 400px;
+         flex: 1;
          object-fit: cover;
          padding: 8px;
       }
