--- a/views/room.ejs
+++ b/views/room.ejs
@@ -20,9 +20,11 @@
          display: flex;
          justify-content: center;
          flex-wrap: wrap;
+         flex: 1;
       }
       video{
-         flex: 2;
+        width: 400px;
+        height: 350px;
          object-fit: cover;
          padding: 8px;
       }
