--- a/views/room.ejs
+++ b/views/room.ejs
@@ -3,7 +3,7 @@
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Seaera | <%= locals.title %></title>
+   <title>Seaera</title>
    <script>
       const ROOM_ID = "<%= roomId %>"
    </script>
@@ -11,20 +11,19 @@
    <script defer src="https://unpkg.com/peerjs@1.3.1/dist/peerjs.min.js"></script>
    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-   <script src="/socket.io/socket.io.js"></script>
-   <link rel="stylesheet" href="../css/room.css">
+   <script src="/socket.io/socket.io.js" defer></script>
+   <link rel="stylesheet" href="/room.css">
    <script src="https://kit.fontawesome.com/c939d0e917.js"></script>
-   <script src="../script.js" defer></script>
+   <script src="/script.js" defer></script>
    <style>
       #video-grid{
          display: flex;
          justify-content: center;
          flex-wrap: wrap;
-         flex: 1;
       }
       video{
-        width: 400px;
-        height: 350px;
+         height: 300px;
+         width: 400px;
          object-fit: cover;
          padding: 8px;
       }
