--- a/views/room.ejs
+++ b/views/room.ejs
@@ -22,8 +22,7 @@
          flex-wrap: wrap;
       }
       video{
-         height: 300px;
-         width: 400px;
+         flex: 1;
          object-fit: cover;
          padding: 8px;
       }
