--- a/public/css/room.css
+++ b/public/css/room.css
@@ -7,14 +7,14 @@
     font-family: 'Poppins', sans-serif;
 }
 body {
-    height: 100%;
+    height: 100vh;
     width: 100%;
     padding: 0;
     margin: 0;
     background: #000;
 }
 .main {
-    height: 100vh;
+    max-height: 100vh;
     display: flex;
 }
 
@@ -29,7 +29,6 @@ body {
 }
 
 .main__videos {
-    flex-grow: 1;
     background-color: black;
     display: flex;
     justify-content: center;
