--- a/views/room.ejs
+++ b/views/room.ejs
@@ -19,10 +19,12 @@
       #video-grid{
          display: flex;
          justify-content: center;
-         flex-wrap: wrap;
+         flex-direction: row;
       }
       video{
-         flex:2;
+         flex: 2;
+         min-width: 400px;
+         min-height: 350px;
          object-fit: cover;
          padding: 8px;
       }
