--- a/views/home.ejs
+++ b/views/home.ejs
@@ -23,7 +23,7 @@
                 <div class="nav__menu" id="nav-menu">
                     <ul class="nav__list">
                         <li class="nav__item"><a href="/join" class="nav__link">Join Meeting</a></li>
-                        <li class="nav__item"><a href="<%= room_url %>" class="nav__link">Create Meeting</a></li>
+                        <li class="nav__item"><a href="/create" class="nav__link">Create Meeting</a></li>
                         <li class="nav__item"><a href="#" class="nav__link">Pricing</a></li>
                     </ul>
                 </div>
@@ -61,6 +61,15 @@
                     <div class="section__data">
                         <h2 class="section__title">Chat with friends</h2>
                         <p class="section__text">We know simple moments make good memories and we all know we love sharing thos memories. Why not choose Seaera to share those lovely memories with your friends and family</p>
+                    </div>
+        
+                    <img src="../img/chat.jpg" alt="" class="section__img">
+                </div>
+
+                <div class="section">
+                    <div class="section__data">
+                        <h2 class="section__title">Free One 2 One meeting</h2>
+                        <p class="section__text">A very fast and reliable one to one meeting</p>
                     </div>
         
                     <img src="../img/chat.jpg" alt="" class="section__img">
