--- a/public/style.css
+++ b/public/style.css
@@ -9,13 +9,14 @@ body{
 }
 
 video{
-    height: 300px;
-    width: 400px;
+    height: 250px;
+    width: 320px;
     object-fit: cover;
 }
 
 .main{
     height: 100vh;
+    width: 100%;
     display: flex;
 }
 
