--- a/views/room.ejs
+++ b/views/room.ejs
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Zoom-Clone</title>
+    <title>Seaera</title>
     <script src="/socket.io/socket.io.js"></script>
     <link rel="stylesheet" href="../style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
@@ -58,7 +58,7 @@
                 <div class="main_controls_block">
                     
                     <div class="main_controls_button"> 
-                        <span class="leave_meeting">Leave Meeting</span>
+                        <a href="/exit" class="leave_meeting"></a>
                     </div>
                 </div>
 
@@ -79,6 +79,9 @@
         </div>
 
     </div>
+    <script>
+        const user = prompt('Your Username')
+    </script>
     <script src="../script.js"></script>
 </body>
 
