--- a/public/style.css
+++ b/public/style.css
@@ -61,7 +61,7 @@ video{
 }
 
 .main_controls_button i{
-    font-size: 24px;
+    font-size: 20px;
 }
 
 .main_controls_button:hover{
@@ -71,6 +71,8 @@ video{
 
 .leave_meeting{
     color: #EB534B;
+    text-decoration: none;
+    font-size: 18px;
 }
 
 .main_right{
