--- a/views/create.ejs
+++ b/views/create.ejs
@@ -49,6 +49,7 @@
         background: #3893c7;
         border-radius: 9px;
         color: #fff;
+        cursor: pointer;
         }
 
         @media screen and (max-width: 1024px) {
