--- a/views/create.ejs
+++ b/views/create.ejs
@@ -70,7 +70,7 @@
     
     <div class="form">
         <h2>Meeting name</h2>
-        <input type="text" id="url" placeholder=" Meeting room Name">
+        <input type="text" id="url" placeholder=" Meeting Code">
         <a href="" id="create_meeting"><button>Create Meeting</button></a>
     </div>
 
