--- a/views/exit.ejs
+++ b/views/exit.ejs
@@ -5,8 +5,37 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Thanks</title>
+
+    <style>
+        body {
+            display: flex;
+            justify-content: center;
+            margin: 0;
+            padding: 0;
+            flex-direction: column;
+            box-sizing: border-box;
+            margin: 10% auto;
+            align-items: center;
+        }
+        h2 {
+            font-size: 40px;
+            font-family: Verdana, Geneva, Tahoma, sans-serif;
+        }
+        a {
+            width: 400px;
+            background: rgb(34, 124, 177);
+            border-radius: 9px;
+            font-family: Verdana, Geneva, Tahoma, sans-serif;
+            text-decoration: none;
+            color: #fff;
+            font-size: 19px;
+            text-align: center;
+            height: 38px;
+        }
+    </style>
 </head>
 <body>
-    
+    <h2>Thanks for letting us connect you</h2>
+    <a href="/join">Join Meeting</a>
 </body>
 </html>
