--- a/views/room.ejs
+++ b/views/room.ejs
@@ -45,15 +45,10 @@
                         <i class="fas fa-comment-alt"></i>
                         <span>Chat</span>
                     </div>
-                </div>
-
-                <div class="main_controls_block">
-                    
                     <div class="main_controls_button"> 
-                        <a href="/exit" class="leave_meeting"></a>
+                        <span class="leave_meeting" style="color: red;"><a href="/exit" style="text-decoration: none; color: red;">Leave meeting</a></span>
                     </div>
                 </div>
-
             </div>
         </div>
         <div class="main_right">
